fix(banner): keep banner from collapsing

--- a/src/patternfly/components/Banner/banner.scss
+++ b/src/patternfly/components/Banner/banner.scss
@@ -25,6 +25,7 @@
   @include pf-text-overflow;
 
   padding: var(--pf-c-banner--PaddingTop) var(--pf-c-banner--PaddingRight) var(--pf-c-banner--PaddingBottom) var(--pf-c-banner--PaddingLeft);
+  flex-shrink: 0;
   font-size: var(--pf-c-banner--FontSize);
   color: var(--pf-c-banner--Color);
   white-space: nowrap;
